<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/iv_login_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_icon_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_login_icon"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="28sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="40dp">

        <com.a10835.easywol.view.XEditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"
            android:textColor="@color/white"
            android:hint="@string/et_login_phone_string"
            android:singleLine="true"
            android:maxLength="11"
            android:textCursorDrawable="@drawable/xedit_curson_drawable"
            android:theme="@style/XEditTextTheme"
            android:textColorHint="@color/white"/>

        <com.a10835.easywol.view.XEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_login_phone"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:hint="@string/et_login_password_string"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/xedit_curson_drawable"
            android:theme="@style/XEditTextTheme"
            android:textColorHint="@color/white"
            />
        <TextView
            android:id="@+id/btn_login"
            android:layout_below="@id/et_login_password"
            android:text="@string/btn_login"
            android:gravity="center"
            android:layout_marginTop="38dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/bg_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_find_password"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="8dp"
            android:text="@string/find_password"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_user_register"
            android:layout_below="@id/btn_login"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:text="@string/user_register"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>


</LinearLayout>
