<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:background="@color/bg_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            >
            <TextView
                android:id="@+id/tv_title_tool_bar"
                android:text="@string/tool_bar_add_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="#616161"
                android:textStyle="bold"
                />
            <FrameLayout
                android:id="@+id/fm_tool_bar_icon"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_tool_bar_icon"
                android:layout_width="50dp"
                android:layout_height="32dp">
                <TextView
                    android:id="@+id/tv_right_title_tool_bar"
                    android:text="@string/cancel"
                    android:textColor="@color/dark_white_1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_add_devices"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/earth_add_devices" />
            <com.a10835.easywol.view.XEditText
                android:id="@+id/et_add_devices_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/dark_white_1"
                android:hint="@string/add_devices_ip"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/xedit_curson_drawable_dark_white"
                android:theme="@style/XEditTextTheme_1"
                android:textColorHint="@color/dark_white_1"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.a10835.easywol.view.XEditText
                    android:id="@+id/et_add_devices_port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:textColor="@color/dark_white_1"
                    android:hint="@string/add_devices_port"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/xedit_curson_drawable_dark_white"
                    android:theme="@style/XEditTextTheme_1"
                    android:textColorHint="@color/dark_white_1"/>
                <com.a10835.easywol.view.XEditText
                    android:id="@+id/et_add_devices_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/dark_white_1"
                    android:hint="@string/add_devices_password"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/xedit_curson_drawable_dark_white"
                    android:theme="@style/XEditTextTheme_1"
                    android:textColorHint="@color/dark_white_1"/>
            </LinearLayout>
            <com.a10835.easywol.view.XEditText
                android:id="@+id/et_add_devices_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/dark_white_1"
                android:hint="@string/add_devices_mac"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/xedit_curson_drawable_dark_white"
                android:theme="@style/XEditTextTheme_1"
                android:textColorHint="@color/dark_white_1"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.a10835.easywol.view.XEditText
                    android:id="@+id/et_add_devices_subnet_mask"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/dark_white_1"
                    android:hint="@string/add_devices_sub_mask"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/xedit_curson_drawable_dark_white"
                    android:theme="@style/XEditTextTheme_1"
                    android:textColorHint="@color/dark_white_1"/>
                <com.a10835.easywol.view.XEditText
                    android:id="@+id/et_add_devices_name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/dark_white_1"
                    android:hint="@string/add_devices_name"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/xedit_curson_drawable_dark_white"
                    android:theme="@style/XEditTextTheme_1"
                    android:textColorHint="@color/dark_white_1"/>
            </LinearLayout>


        </LinearLayout>
        <TextView

            android:id="@+id/btn_add_devices_save"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/bg_add_devices_next"
            android:text="@string/add_devices_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>