<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_fragment_mine_user_info"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <org.raphets.roundimageview.RoundImageView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_mine_fragment_profile"
                app:border_width="4dp"
                app:border_color="#F5F5F5"
                app:type="circle" />
            <TextView
                android:id="@+id/tv_mine_fragment_phone"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="17853593228"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/iv_fragment_mine_person_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_mine_fragment_next"
                />
        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardCornerRadius="8dp"
            android:elevation="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ll_fragment_mine_share"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>
                <LinearLayout
                    android:id="@+id/ll_fragment_mine_tipping"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView

                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_tipping"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/iv_fragment_mine_tipping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_mine_fragment_next"
                        />
                </LinearLayout>
                <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>

                <LinearLayout
                    android:id="@+id/ll_fragment_mine_fead_back"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_fead_back"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_mine_fragment_next"
                        />
                </LinearLayout>
                <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>
                <LinearLayout
                    android:id="@+id/ll_fragment_mine_check_update"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_check_update"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/tv_fragment_mine_version"
                        android:text="v1.2.3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:text="@string/mine_fragment_relation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            app:cardCornerRadius="8dp"
            android:elevation="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ll_fragment_mine_sinaweibo"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_sina_weibo"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/tv_fragment_mine_sina"
                        android:text="\@喜盈盈虾条"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>
                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_git_hub"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="QiangzhenZhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>

                <LinearLayout
                    android:id="@+id/ll_fragment_mine_email"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_email"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="1083546145@qq.com"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
               <!-- <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>
                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:text="@string/mine_fragment_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:background="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp">
                </View>-->

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>